# django-generate-fixtures

./: AUTHORS  ChangeLog  README  README.md  setup.cfg  setup.py
django_generate_fixtures/: __init__.py
django_generate_fixtures/management/: __init__.py
django_generate_fixtures/management/commands/: __init__.py  generate_fixtures.py
management/commands/: __init__.py  generate_fixtures.py
