[metadata]
name = django-generate-fixtures
author = aRkadeFR
author_email = contact@arkade.info
summary = Easy way to generate fixtures (in json) for django following the links of a given object
description-file = README
home-page = https://github.com/aRkadeFR/django-generate-fixtures
license = GPLv3+
classifier = 
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Framework :: Django
	Framework :: Django :: 1.6
	Framework :: Django :: 1.7
	Framework :: Django :: 1.8
	Framework :: Django :: 1.9
	Operating System :: POSIX :: Linux
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
keywords =
	django
	fixtures
	generate
[files]
packages =
	django_generate_fixtures
